# ascut

./: .gitignore  2a.txt  CLAUDE.md  README.md  config.toml  inspect_demo1.py  pyproject.toml  session-design.md  session-design.txt
.claude/: settings.local.json
autosmartcut/: annotation_tokens.py  app_controller.py  cli_adapter.py  config.py  dual_track_merge.py  dual_track_orchestrator.py  execution.py  formatters.py  input_resolver.py  intelligence.py  intelligence_2a.py  intelligence_2b.py  intelligence_2c.py  intelligence_2d.py  intelligence_2d_shell.py  intelligence_llm.py  l3_assembler.py  l3_encoder.py  l3_errors.py  l3_models.py  l3_orchestrator.py  l3_planner.py  l3_precompute.py  l3_resolver.py  l3_sidecar.py  l3_tile_paths.py  layer2_tokens.py  log.py  manifest.py  manifest_io.py  manifest_progress.py  manifest_stages.py  perception.py  pipeline_events.py  pipeline_models.py  pipeline_protocols.py  pipeline_run.py  pipeline_scheduler.py  pipeline_session.py  progress_utils.py  (+5 more)
demos/: demo1_asr.py  demo2_llm.py  demo3_smartcut.py  demo_layer2_input_2ab_compare.py  gen_demo_jsons.py  inspect_demo1.py
doc/: AutoSmartCut-Future.md  AutoSmartCut-MVP-Mini.md  AutoSmartCut-MVP.md  AutoSmartCut.md  after-mvp-todo.md  architecture.md  cli-and-config.md  decisions.md  deepseek-api-docs.md  deepseek_api_docs.md  future-roadmap.md  intelligence-decisions.md  intelligence-design.md  intelligence-layer2-mvp.md  intelligence.md  专家角色提示与模型性能关系.md
output/: layer1_annotations.json  layer2_input.json
tests/: test_annotation_tokens.py  test_app_controller.py  (+24 more)
(+91 files in other folders)
