[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosmartcut"
version = "0.1.0"
description = "Semantic video cutting pipeline"
requires-python = ">=3.11"
dependencies = [
    "python-ulid>=3.1.0",  # autosmartcut.pipeline_run (from ulid import ULID)
    "soundfile>=0.12",
    "qwen-asr",
    "jsonschema>=4,<5",
    "openai>=1.0",
    "numpy>=1.24",
    "av>=12",
    "silero-vad>=5.0",
    "torch>=2.0",
    "onnxruntime>=1.16",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autosmartcut*"]

[project.scripts]
ascut = "autosmartcut.runner:main"
